test/corpus/captures.txt
================================================================================
Captures
================================================================================

var = ${value};

--------------------------------------------------------------------------------

(program
  (expression_statement
      (assignment_expression
          (identifier)
          (capture
            (identifier)))))

================================================================================
Capture Left
================================================================================

${target} = ${value};

--------------------------------------------------------------------------------

(program
  (expression_statement
      (assignment_expression
          (capture
            (identifier))
          (capture
            (identifier)))))
