test/corpus/comments.txt
====
comment
====

// This is a comment
/* This is also a comment */
/* this comment /* // /** ends here: */
/**/

---

(program (line_comment) (block_comment) (block_comment) (block_comment))

======================
comments and literals
======================

123;
// comment

---

(program
  (expression_statement (decimal_integer_literal))
  (line_comment))
